# fake-news-detector

./: .gitignore  README.md  docker-compose.yml  model_training.ipynb  pyproject.toml
