[tool.poetry]
name = "fake-news-detector"
version = "0.1.0"
description = "Project to detect fake news"
authors = ["Álvaro <139258338+SkunkWorker1980@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.2"
matplotlib = "3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
